feat(数据验证): 新增数据完整性验证服务
实现数据完整性验证和自动补全功能，包括：
1. 添加数据验证服务核心逻辑
2. 配置环境变量和控制参数
3. 实现定时验证调度器
4. 添加测试用例验证功能

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,9 @@ CANDLE_INTERVAL=1H
 # Gradio 配置
 GRADIO_SERVER_PORT=7881
 GRADIO_SERVER_NAME=0.0.0.0
+
+# 数据完整性验证配置
+DATA_VALIDATION_ENABLED=true
+DATA_VALIDATION_INTERVAL_HOURS=12
+DATA_VALIDATION_MAX_MISSING_POINTS=300
+DATA_VALIDATION_BATCH_SIZE=300
