feat(agent): 实现统一的LangChain Agent服务v2并替换旧实现
重构agent服务为统一的LangChain Agent v2实现，使用现代API适配Gradio Chatbot接口
- 新增LangChainAgentV2Service作为核心服务类
- 移除旧的agent_service和agent_stream_service实现
- 更新UI层调用以使用新服务
- 添加新的测试用例test_agent_v2.py
- 更新requirements.txt中的LangChain依赖版本

--- a/requirements.txt
+++ b/requirements.txt
@@ -49,10 +49,11 @@ anthropic  # Claude API
 openai  # OpenAI & Qwen (兼容) API
 
 # LangChain (AI Agent 框架)
-langchain>=0.3.0,<1.0.0
-langchain-core>=0.3.78,<1.0.0
-langchain-openai>=0.2.0,<1.0.0
-langchain-anthropic>=0.2.0,<1.0.0
+langchain>=0.3.0
+langchain-core>=1.1.0
+langchain-openai>=0.2.0
+langchain-anthropic>=0.2.0
+langchain-community>=0.3.0
 
 # ============================================
 # 可选依赖 (根据需要安装)
