feat(logging): 添加详细日志配置以增强推理过程的透明度
- 在配置文件中添加AGENT_DETAILED_LOGGING选项，允许用户控制推理过程中的详细日志记录。
- 更新LangChainAgentService以支持详细日志记录，记录系统提示和推理过程中的关键信息，提升调试能力和可追溯性。
- 修改示例环境文件以包含新的日志配置选项，确保用户能够轻松配置。

这些改动增强了系统的日志记录能力，提升了推理过程的透明度和可维护性。

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,5 @@ DATA_VALIDATION_ENABLED=true
 DATA_VALIDATION_INTERVAL_HOURS=12
 DATA_VALIDATION_MAX_MISSING_POINTS=300
 DATA_VALIDATION_BATCH_SIZE=300
+
+AGENT_DETAILED_LOGGING=false
